--- a/StoreExportPanel/StoreExportPanelSketchPanelCellSelectFolder.xib
+++ b/StoreExportPanel/StoreExportPanelSketchPanelCellSelectFolder.xib
@@ -20,7 +20,7 @@
                         <constraint firstAttribute="width" constant="95" id="QGB-RG-gcE"/>
                     </constraints>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="iOS Project Folder" id="lGj-uH-ehb">
-                        <font key="font" metaFont="systemMedium" size="11"/>
+                        <font key="font" metaFont="systemLight" size="11"/>
                         <color key="textColor" white="0.0" alpha="0.84999999999999998" colorSpace="calibratedWhite"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
