Fixed confirm button not showing

--- a/StoreExportPanel/StoreExportPanelSketchPanelCellDefault.xib
+++ b/StoreExportPanel/StoreExportPanelSketchPanelCellDefault.xib
@@ -18,8 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="196" height="47"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView editable="NO" selectable="NO" drawsBackground="NO" importsGraphics="NO" verticallyResizable="YES" usesFontPanel="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="UQ5-5i-aZH">
-                                <rect key="frame" x="0.0" y="0.0" width="196" height="47"/>
+                            <textView editable="NO" selectable="NO" drawsBackground="NO" importsGraphics="NO" verticallyResizable="YES" findStyle="panel" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" smartInsertDelete="YES" id="UQ5-5i-aZH">
+                                <rect key="frame" x="0.0" y="0.0" width="322" height="47"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <size key="minSize" width="196" height="47"/>
