--- a/StoreExportPanel/StoreExportPanelSketchPanelCellDefault.xib
+++ b/StoreExportPanel/StoreExportPanelSketchPanelCellDefault.xib
@@ -9,20 +9,20 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="VOz-wC-YDv" customClass="StoreExportPanelSketchPanelCellDefault">
-            <rect key="frame" x="0.0" y="0.0" width="262" height="63"/>
+            <rect key="frame" x="0.0" y="0.0" width="262" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" horizontalScrollElasticity="none" verticalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="om7-fl-MrZ">
-                    <rect key="frame" x="8" y="8" width="246" height="47"/>
+                <scrollView borderType="none" horizontalLineScroll="0.0" horizontalPageScroll="0.0" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" horizontalScrollElasticity="none" verticalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="om7-fl-MrZ">
+                    <rect key="frame" x="2" y="8" width="258" height="64"/>
                     <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="tzD-ok-AQR">
-                        <rect key="frame" x="0.0" y="0.0" width="246" height="47"/>
+                        <rect key="frame" x="0.0" y="0.0" width="258" height="64"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView editable="NO" selectable="NO" drawsBackground="NO" importsGraphics="NO" verticallyResizable="YES" findStyle="panel" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" smartInsertDelete="YES" id="UQ5-5i-aZH">
-                                <rect key="frame" x="0.0" y="0.0" width="372" height="47"/>
+                            <textView editable="NO" selectable="NO" drawsBackground="NO" importsGraphics="NO" horizontallyResizable="YES" verticallyResizable="YES" findStyle="panel" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" smartInsertDelete="YES" id="UQ5-5i-aZH">
+                                <rect key="frame" x="0.0" y="0.0" width="258" height="64"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <size key="minSize" width="246" height="47"/>
+                                <size key="minSize" width="258" height="64"/>
                                 <size key="maxSize" width="463" height="10000000"/>
                                 <color key="insertionPointColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </textView>
@@ -41,14 +41,14 @@
             </subviews>
             <constraints>
                 <constraint firstItem="om7-fl-MrZ" firstAttribute="top" secondItem="VOz-wC-YDv" secondAttribute="top" constant="8" id="4Xr-01-5BI"/>
-                <constraint firstAttribute="trailing" secondItem="om7-fl-MrZ" secondAttribute="trailing" constant="8" id="BCc-hY-3HM"/>
+                <constraint firstAttribute="trailing" secondItem="om7-fl-MrZ" secondAttribute="trailing" constant="2" id="BCc-hY-3HM"/>
                 <constraint firstAttribute="bottom" secondItem="om7-fl-MrZ" secondAttribute="bottom" constant="8" id="PAa-pc-R3O"/>
-                <constraint firstItem="om7-fl-MrZ" firstAttribute="leading" secondItem="VOz-wC-YDv" secondAttribute="leading" constant="8" id="cOk-8s-FSf"/>
+                <constraint firstItem="om7-fl-MrZ" firstAttribute="leading" secondItem="VOz-wC-YDv" secondAttribute="leading" constant="2" id="cOk-8s-FSf"/>
             </constraints>
             <connections>
                 <outlet property="titleTextView" destination="UQ5-5i-aZH" id="A5m-cW-XX4"/>
             </connections>
-            <point key="canvasLocation" x="32" y="123.5"/>
+            <point key="canvasLocation" x="32" y="132"/>
         </customView>
     </objects>
 </document>
