--- a/StoreExportPanel/StoreExportPanelSketchPanelCellSelectFolder.xib
+++ b/StoreExportPanel/StoreExportPanelSketchPanelCellSelectFolder.xib
@@ -14,13 +14,13 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qXW-tv-sKJ">
-                    <rect key="frame" x="6" y="13" width="99" height="17"/>
+                    <rect key="frame" x="6" y="13" width="114" height="17"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="17" id="5xm-LA-icE"/>
-                        <constraint firstAttribute="width" constant="95" id="QGB-RG-gcE"/>
+                        <constraint firstAttribute="width" constant="110" id="QGB-RG-gcE"/>
                     </constraints>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="iOS Project Folder" id="lGj-uH-ehb">
-                        <font key="font" metaFont="systemLight" size="11"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Localisations Folder" id="lGj-uH-ehb">
+                        <font key="font" metaFont="systemMedium" size="11"/>
                         <color key="textColor" white="0.0" alpha="0.84999999999999998" colorSpace="calibratedWhite"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
